@@ -1,4 +1,7 @@
-Sun Dec 13 18:46:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sun Dec 13 18:49:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (parse_mode_enc): preserve encoding of mode string in
+	  warnings.
 
 	* io.c (io_encname_bom_p): check BOM prefix only, not including
 	  UTF prefix.
